--- a/src/courses/BasicProgramming/BasicProgramming.csproj
+++ b/src/courses/BasicProgramming/BasicProgramming.csproj
@@ -92,7 +92,7 @@
     <Compile Include="Slides\U03_Cycles\S022_MiddleOf3Task.cs" />
     <Compile Include="Slides\U03_Cycles\S023_QueenMove.cs" />
     <Compile Include="Slides\U03_Cycles\S030_IfErrorsVideo.cs" />
-    <Compile Include="Slides\U03_Cycles\S032_ExcessIf.cs" />
+    <Compile Include="Slides\U03_Cycles\S032_RobotControl.cs" />
     <Compile Include="Slides\U03_Cycles\S040_WhileVideo.cs" />
     <Compile Include="Slides\U03_Cycles\S041_While.cs" />
     <Compile Include="Slides\U03_Cycles\S042_Break.cs" />
