--- a/src/courses/BasicProgramming/BasicProgramming.csproj
+++ b/src/courses/BasicProgramming/BasicProgramming.csproj
@@ -113,18 +113,22 @@
     <Compile Include="Slides\U05_Collections\S010_List.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Slides\U05_Collections\S011_ListTask.cs" />
     <Compile Include="Slides\U05_Collections\S020_Dictionary.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Slides\U05_Collections\S021_DictionaryTask.cs" />
     <Compile Include="Slides\U05_Collections\S030_ArrAndStringDiff.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Slides\U05_Collections\S040_StringBuilder.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Slides\U05_Collections\S041_StringBuilderTask.cs" />
     <Compile Include="Slides\U05_Collections\S050_SpecialChars.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Slides\U05_Collections\S051_SpecialCharsTask.cs" />
     <Compile Include="Slides\U05_Collections\S060_FormatOutput.cs">
       <SubType>Code</SubType>
     </Compile>
