--- a/src/uLearn/packages.config
+++ b/src/uLearn/packages.config
@@ -3,6 +3,7 @@
   <package id="bootstrap" version="3.1.1" targetFramework="net45" />
   <package id="CodeMirror" version="2.37" targetFramework="net45" />
   <package id="jQuery" version="1.9.0" targetFramework="net45" />
+  <package id="MarkdownDeep.NET" version="1.5" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Bcl.Immutable" version="1.1.20-beta" targetFramework="net45" />
   <package id="Microsoft.Bcl.Metadata" version="1.0.9-alpha" targetFramework="net45" />
