--- a/src/courses/BasicProgramming/BasicProgramming.csproj
+++ b/src/courses/BasicProgramming/BasicProgramming.csproj
@@ -30,6 +30,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="nunit.framework">
       <HintPath>..\..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
     </Reference>
@@ -139,11 +140,23 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Slides\U05_Collections\_SpecialCharsInclude.cs" />
+    <Compile Include="Slides\U06_AutomaticTesting\S070_Conclusion.cs" />
+    <Compile Include="Slides\U06_AutomaticTesting\_Program.cs" />
+    <Compile Include="Slides\U06_AutomaticTesting\_QuadricEquation.cs" />
+    <Compile Include="Slides\U06_AutomaticTesting\S010_Testing.cs" />
+    <Compile Include="Slides\U06_AutomaticTesting\S020_Library.cs" />
+    <Compile Include="Slides\U06_AutomaticTesting\S030_UnitTest.cs" />
+    <Compile Include="Slides\U06_AutomaticTesting\S040_MultiplyUnitTest.cs" />
+    <Compile Include="Slides\U06_AutomaticTesting\S050_FunctionalTestingcs.cs" />
+    <Compile Include="Slides\U06_AutomaticTesting\S060_ForWhatThisTests.cs" />
+    <Compile Include="Slides\U06_AutomaticTesting\_UnitTest.cs" />
     <Compile Include="Slides_Tests.cs" />
     <Content Include="Slides\U04_Arrays\Prelude.txt" />
     <Content Include="Slides\U04_Arrays\Title.txt" />
     <Content Include="Slides\U05_Collections\Prelude.txt" />
     <Content Include="Slides\U05_Collections\Title.txt" />
+    <Content Include="Slides\U06_AutomaticTesting\Prelude.txt" />
+    <Content Include="Slides\U06_AutomaticTesting\Title.txt" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\uLearn\uLearn.csproj">
