--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -50,7 +50,8 @@
 		<staticContent>
 			<mimeMap fileExtension="woff" mimeType="application/font-woff" />
             <mimeMap fileExtension="odp" mimeType="application/vnd.oasis.opendocument.presentation" />
-		</staticContent>
+            <mimeMap fileExtension="zip" mimeType="application/zip" />
+        </staticContent>
 	</system.webServer>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
