--- a/src/courses/BasicProgramming/BasicProgramming.csproj
+++ b/src/courses/BasicProgramming/BasicProgramming.csproj
@@ -67,6 +67,8 @@
     <Compile Include="Slides\U01_Basics\S100_FinalTask.cs" />
     <Compile Include="Slides\U01_Basics\S000_HelpSlide.cs" />
     <Compile Include="Slides\U01_Basics\_HelloWorld.cs" />
+    <Content Include="Slides\U99_Presentation\Prelude.txt" />
+    <Content Include="Slides\U99_Presentation\Title.txt" />
     <None Include="Slides\U01_Basics\InstructorNotes.md" />
     <Content Include="Slides\U02_Mistakes\S091_Style2.xml">
       <SubType>Designer</SubType>
@@ -160,6 +162,26 @@
     <Compile Include="Slides\U07_Algorithms\S050_BasicTerms.cs" />
     <Compile Include="Slides\U07_Algorithms\S070_ComplexityMark.cs" />
     <Compile Include="Slides\U07_Algorithms\S080_ComplexityClasses.cs" />
+    <Compile Include="Slides\U99_Presentation\_S011_Attributes2.cs" />
+    <Compile Include="Slides\U99_Presentation\S011_Attributes2.cs" />
+    <Compile Include="Slides\U99_Presentation\S000_About.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Slides\U99_Presentation\S010_Attributes.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Slides\U99_Presentation\S020_Markdown.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Slides\U99_Presentation\_AttrInitial.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Slides\U99_Presentation\_MarkdownExample.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Slides\U99_Presentation\_SampleIncludeFile.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Slides_Tests.cs" />
     <Content Include="Slides\U04_Arrays\Prelude.txt" />
     <Content Include="Slides\U03_Cycles\shapes.png" />
