--- a/src/courses/BasicProgramming/BasicProgramming.csproj
+++ b/src/courses/BasicProgramming/BasicProgramming.csproj
@@ -110,6 +110,8 @@
     <Compile Include="Slides\U03_Cycles\S055_Border.cs" />
     <Compile Include="Slides\U03_Cycles\S065_Chessboard.cs" />
     <Compile Include="Slides\U04_Arrays\S010_ArrayAndForeach.cs" />
+    <Compile Include="Slides\U04_Arrays\S017_CountElement.cs" />
+    <Compile Include="Slides\U04_Arrays\S016_FindMinIndex.cs" />
     <Compile Include="Slides\U04_Arrays\S021_DigitsToText.cs" />
     <Compile Include="Slides\U04_Arrays\S015_ReverseArray.cs" />
     <Compile Include="Slides\U04_Arrays\S020_ShortForm.cs" />
