--- a/src/courses/BasicProgramming/BasicProgramming.csproj
+++ b/src/courses/BasicProgramming/BasicProgramming.csproj
@@ -45,66 +45,68 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Slides\U01_Basics\S010_HelloWorldVideo.cs" />
-    <Compile Include="Slides\U01_Basics\S012_InformationSources.cs" />
-    <Compile Include="Slides\U01_Basics\S011_FirstStep.cs" />
-    <Compile Include="Slides\U01_Basics\S020_TypesVideo.cs" />
-    <Compile Include="Slides\U01_Basics\S021_TypesExercise.cs" />
-    <Compile Include="Slides\U01_Basics\S032_Conversion2.cs" />
-    <Compile Include="Slides\U01_Basics\S031_Conversion.cs" />
-    <Compile Include="Slides\U01_Basics\S040_StringsVideo.cs" />
-    <Compile Include="Slides\U01_Basics\S071_Strings.cs" />
-    <Compile Include="Slides\U01_Basics\S050_ParseAndToString.cs" />
-    <Compile Include="Slides\U01_Basics\S060_OperationsVideo.cs" />
-    <Compile Include="Slides\U01_Basics\S061_Operations.cs" />
-    <Compile Include="Slides\U01_Basics\S080_LocalAndGlobalVarsVideo.cs" />
-    <Compile Include="Slides\U01_Basics\S070_MethodsVideo.cs" />
-    <Compile Include="Slides\U01_Basics\S072_Methods.cs" />
+    <Compile Include="Slides\U00_Basics\S010_HelloWorldVideo.cs" />
+    <Compile Include="Slides\U00_Basics\S012_InformationSources.cs" />
+    <Compile Include="Slides\U00_Basics\S011_FirstStep.cs" />
+    <Compile Include="Slides\U00_Basics\S020_TypesVideo.cs" />
+    <Compile Include="Slides\U00_Basics\S021_TypesExercise.cs" />
+    <Compile Include="Slides\U00_Basics\S032_Conversion2.cs" />
+    <Compile Include="Slides\U00_Basics\S031_Conversion.cs" />
+    <Compile Include="Slides\U00_Basics\S040_StringsVideo.cs" />
+    <Compile Include="Slides\U00_Basics\S071_Strings.cs" />
+    <Compile Include="Slides\U00_Basics\S050_ParseAndToString.cs" />
+    <Compile Include="Slides\U00_Basics\S060_OperationsVideo.cs" />
+    <Compile Include="Slides\U00_Basics\S061_Operations.cs" />
+    <Compile Include="Slides\U00_Basics\S080_LocalAndGlobalVarsVideo.cs" />
+    <Compile Include="Slides\U00_Basics\S070_MethodsVideo.cs" />
+    <Compile Include="Slides\U00_Basics\S072_Methods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Content Include="Slides\U01_Basics\S081-Scope.xml">
+    <Content Include="Slides\U00_Basics\S081-Scope.xml">
       <SubType>Designer</SubType>
     </Content>
-    <Compile Include="Slides\U01_Basics\S100_FinalTask.cs" />
-    <Compile Include="Slides\U01_Basics\S000_HelpSlide.cs" />
-    <Compile Include="Slides\U01_Basics\_HelloWorld.cs" />
+    <Compile Include="Slides\U00_Basics\S100_FinalTask.cs" />
+    <Compile Include="Slides\U00_Basics\S000_HelpSlide.cs" />
+    <Compile Include="Slides\U00_Basics\_HelloWorld.cs" />
+    <Content Include="Slides\U02_Ifs\Prelude.txt" />
+    <Content Include="Slides\U02_Ifs\Title.txt" />
     <Content Include="Slides\U99_Presentation\Prelude.txt" />
     <Content Include="Slides\U99_Presentation\Title.txt" />
-    <Content Include="Slides\U08_Recursion\Prelude.txt" />
-    <Content Include="Slides\U08_Recursion\Title.txt" />
-    <None Include="Slides\U01_Basics\InstructorNotes.md" />
-    <Content Include="Slides\U02_Mistakes\S091_Style2.xml">
+    <None Include="Slides\U01_Mistakes\InstructorNotes.md" />
+    <Content Include="Slides\U01_Mistakes\S091_Style2.xml">
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="Slides\U02_Mistakes\S076_Style.xml">
+    <Content Include="Slides\U01_Mistakes\S076_Style.xml">
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="Slides\U02_Mistakes\S011-CompileErrors.xml">
+    <Content Include="Slides\U01_Mistakes\S011-CompileErrors.xml">
       <SubType>Designer</SubType>
     </Content>
-    <Compile Include="Slides\U02_Mistakes\S099_Final.cs" />
-    <Compile Include="Slides\U02_Mistakes\S075_RefactoringVideo.cs" />
-    <Compile Include="Slides\U02_Mistakes\S060_Experiments.cs" />
-    <Compile Include="Slides\U02_Mistakes\S010_CompileErrorsVideo.cs" />
-    <Compile Include="Slides\U02_Mistakes\S031_Typo.cs" />
-    <Compile Include="Slides\U02_Mistakes\S040_RuntimeExceptionsVideo.cs" />
-    <Compile Include="Slides\U02_Mistakes\S041_RuntimeErrors.cs" />
-    <Compile Include="Slides\U02_Mistakes\S050_DebugVideo.cs" />
-    <Compile Include="Slides\U02_Mistakes\S070_Style.cs" />
-    <Compile Include="Slides\U02_Mistakes\S080_ConstantAndEnum.cs" />
-    <Compile Include="Slides\U02_Mistakes\S090_MethodRefactoring.cs" />
-    <Compile Include="Slides\U02_Mistakes\_DivisionByZero.cs" />
-    <Compile Include="Slides\U02_Mistakes\_MissedUsings.cs" />
-    <Compile Include="Slides\U02_Mistakes\_TypeCastingMistaces.cs" />
-    <Compile Include="Slides\U02_Mistakes\_Typo.cs" />
-    <Compile Include="Slides\U03_Cycles\S023_QueenMove.cs" />
+    <Compile Include="Slides\U01_Mistakes\S099_Exercise.cs" />
+    <Compile Include="Slides\U01_Mistakes\S095_Quest.cs" />
+    <Compile Include="Slides\U01_Mistakes\S075_RefactoringVideo.cs" />
+    <Compile Include="Slides\U01_Mistakes\S060_Experiments.cs" />
+    <Compile Include="Slides\U01_Mistakes\S010_CompileErrorsVideo.cs" />
+    <Compile Include="Slides\U01_Mistakes\S031_Typo.cs" />
+    <Compile Include="Slides\U01_Mistakes\S040_RuntimeExceptionsVideo.cs" />
+    <Compile Include="Slides\U01_Mistakes\S041_RuntimeErrors.cs" />
+    <Compile Include="Slides\U01_Mistakes\S050_DebugVideo.cs" />
+    <Compile Include="Slides\U01_Mistakes\S070_Style.cs" />
+    <Compile Include="Slides\U01_Mistakes\S080_ConstantAndEnum.cs" />
+    <Compile Include="Slides\U01_Mistakes\S090_MethodRefactoring.cs" />
+    <Compile Include="Slides\U01_Mistakes\_DivisionByZero.cs" />
+    <Compile Include="Slides\U01_Mistakes\_MissedUsings.cs" />
+    <Compile Include="Slides\U01_Mistakes\_TypeCastingMistaces.cs" />
+    <Compile Include="Slides\U01_Mistakes\_Typo.cs" />
+    <Compile Include="Slides\U02_Ifs\S023_QueenMove.cs" />
+    <Compile Include="Slides\U02_Ifs\S099_Exercise.cs" />
     <Compile Include="Slides\U03_Cycles\S044_WhileRefactoringVideo.cs" />
     <Compile Include="Slides\U03_Cycles\S060_ForVsWhileVideo.cs" />
-    <Compile Include="Slides\U03_Cycles\S010_LogicalTypeVideo.cs" />
-    <Compile Include="Slides\U03_Cycles\S015_IsLeapYear.cs" />
-    <Compile Include="Slides\U03_Cycles\S020_IfElse.cs" />
-    <Compile Include="Slides\U03_Cycles\S022_MiddleOf3Task.cs" />
-    <Compile Include="Slides\U03_Cycles\S030_IfErrorsVideo.cs" />
-    <Compile Include="Slides\U03_Cycles\S032_RobotControl.cs" />
+    <Compile Include="Slides\U02_Ifs\S010_LogicalTypeVideo.cs" />
+    <Compile Include="Slides\U02_Ifs\S015_IsLeapYear.cs" />
+    <Compile Include="Slides\U02_Ifs\S020_IfElse.cs" />
+    <Compile Include="Slides\U02_Ifs\S022_MiddleOf3Task.cs" />
+    <Compile Include="Slides\U02_Ifs\S030_IfErrorsVideo.cs" />
+    <Compile Include="Slides\U02_Ifs\S032_RobotControl.cs" />
     <Compile Include="Slides\U03_Cycles\S040_WhileVideo.cs" />
     <Compile Include="Slides\U03_Cycles\S041_PowerOfTwo.cs" />
     <Compile Include="Slides\U03_Cycles\S046_RemoveSpaces.cs" />
@@ -167,14 +169,6 @@
     <Compile Include="Slides\U07_Algorithms\S060_ComplexityMark.cs" />
     <Compile Include="Slides\U07_Algorithms\S070_NumberComplex.cs" />
     <Compile Include="Slides\U07_Algorithms\S080_ComplexityClasses.cs" />
-    <Compile Include="Slides\U08_Recursion\S020_RecursionTree.cs" />
-    <Compile Include="Slides\U08_Recursion\S030_AdvancedExample.cs" />
-    <Compile Include="Slides\U08_Recursion\S040_DivideAndRule.cs" />
-    <Compile Include="Slides\U08_Recursion\S050_Subsets.cs" />
-    <Compile Include="Slides\U08_Recursion\S070_Permutations.cs" />
-    <Compile Include="Slides\U08_Recursion\S090_ComparingSearches.cs" />
-    <Compile Include="Slides\U08_Recursion\S080_BinSearch.cs" />
-    <Compile Include="Slides\U08_Recursion\S060_Combinations.cs" />
     <Compile Include="Slides\U99_Presentation\_S011_Attributes2.cs" />
     <Compile Include="Slides\U99_Presentation\S011_Attributes2.cs" />
     <Compile Include="Slides\U99_Presentation\S000_About.cs">
@@ -195,7 +189,6 @@
     <Compile Include="Slides\U99_Presentation\_SampleIncludeFile.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Slides\U08_Recursion\S010_Recursion.cs" />
     <Compile Include="Slides_Tests.cs" />
     <Content Include="Slides\U04_Arrays\Prelude.txt" />
     <Content Include="Slides\U03_Cycles\shapes.png" />
@@ -209,8 +202,6 @@
     <Content Include="Slides\U06_AutomaticTesting\Title.txt" />
     <Content Include="Slides\U07_Algorithms\Prelude.txt" />
     <Content Include="Slides\U07_Algorithms\Title.txt" />
-    <None Include="Slides\U08_Recursion\InstructorNotes.md" />
-    <None Include="Slides\U08_Recursion\_S020_MemoryMap.odp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\uLearn\uLearn.csproj">
@@ -220,13 +211,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="Slides\U02_Mistakes\InstructorNotes.md" />
+    <None Include="Slides\InstructorNotes_geom.md" />
+    <None Include="Slides\U02_Ifs\InstructorNotes.md" />
     <None Include="Slides\U03_Cycles\InstructorNotes.md" />
-    <None Include="Slides\U04_Arrays\InstructorNotes.md" />
     <None Include="Slides\U04_Arrays\_S050_ValueRferenceType.odp" />
     <None Include="Slides\U04_Arrays\_S070_GraphicDimensional.odp" />
     <None Include="Slides\U04_Arrays\_S090_Memory.odp" />
-    <None Include="Slides\U05_Collections\InstructorNotes.md" />
+    <None Include="Slides\U04_Arrays\InstructorNotes.md" />
     <None Include="Slides\U05_Collections\_S030_StringToMethod.odp" />
     <None Include="Slides\U06_AutomaticTesting\InstructorNotes.md" />
     <None Include="Slides\U07_Algorithms\InstructorNotes.md" />
@@ -234,10 +225,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Slides\Title.txt" />
-    <Content Include="Slides\U01_Basics\Title.txt" />
-    <Content Include="Slides\U01_Basics\Prelude.txt" />
-    <Content Include="Slides\U02_Mistakes\Title.txt" />
-    <Content Include="Slides\U02_Mistakes\Prelude.txt" />
+    <Content Include="Slides\U00_Basics\Title.txt" />
+    <Content Include="Slides\U00_Basics\Prelude.txt" />
+    <Content Include="Slides\U01_Mistakes\Title.txt" />
+    <Content Include="Slides\U01_Mistakes\Prelude.txt" />
     <Content Include="Slides\U03_Cycles\Title.txt" />
     <Content Include="Slides\U03_Cycles\Prelude.txt" />
   </ItemGroup>
