--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -20,6 +20,7 @@
   <package id="Microsoft.Bcl.Metadata" version="1.0.9-alpha" targetFramework="net45" />
   <package id="Microsoft.CodeAnalysis.Common" version="0.6.4033103-beta" targetFramework="net45" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="0.6.4033103-beta" targetFramework="net45" />
+  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.2-rc" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.0.0" targetFramework="net45" />
