--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -662,7 +662,8 @@
     <None Include="Properties\PublishProfiles\ulearn - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\buttons.js" />
-    <Content Include="Scripts\choice-group.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\notify-custom.min.js" />
     <Content Include="Orphus\orphus.gif" />
     <Content Include="Orphus\orphus.js" />
@@ -761,7 +762,7 @@
     <Content Include="Views\Unit\CourseList.cshtml" />
     <Content Include="Views\Analytics\UnitStatistics.cshtml" />
     <Content Include="Views\Course\InstructorNote.cshtml" />
-    <Content Include="Views\Course\_ChoiceGroup.cshtml" />
+    <Content Include="Views\Course\SelectGroup.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Courses\" />
