--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -214,6 +214,15 @@
     <Compile Include="Migrations\201408260518531_Cascading.Designer.cs">
       <DependentUpon>201408260518531_Cascading.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\AcceptedSolutionsPageModel.cs" />
+    <Compile Include="Models\AnalyticsTablePageModel.cs" />
+    <Compile Include="Models\ChoiceGroupPageModel.cs" />
+    <Compile Include="Models\CoursePageModel.cs" />
+    <Compile Include="Models\HintPageModel.cs" />
+    <Compile Include="Models\PersonalStatisticPageModel.cs" />
+    <Compile Include="Models\QuizAnalyticsModel.cs" />
+    <Compile Include="Models\QuizInfoModel.cs" />
+    <Compile Include="Models\TocModel.cs" />
     <Compile Include="Models\UnitAppearance.cs" />
     <Compile Include="DataContexts\SlideHintRepo.cs" />
     <Compile Include="DataContexts\SlideRateRepo.cs" />
@@ -303,6 +312,7 @@
     <Compile Include="Models\PrevNextButtonsModel.cs" />
     <Compile Include="Models\SlideHint.cs" />
     <Compile Include="Models\SlideRate.cs" />
+    <Compile Include="Models\UnitStatisticPageModel.cs" />
     <Compile Include="Models\UserQuestion.cs" />
     <Compile Include="Models\Like.cs" />
     <Compile Include="Models\LmsRoles.cs" />
@@ -310,6 +320,7 @@
     <Compile Include="Models\SlideViewModel.cs" />
     <Compile Include="Models\UserQuiz.cs" />
     <Compile Include="Models\UserSolution.cs" />
+    <Compile Include="Models\UsersStatsPageModel.cs" />
     <Compile Include="Models\Visiters.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ideone\ExecutionService.cs" />
@@ -763,6 +774,7 @@
     <Content Include="Views\Analytics\UnitStatistics.cshtml" />
     <Content Include="Views\Course\InstructorNote.cshtml" />
     <Content Include="Views\Course\SelectGroup.cshtml" />
+    <Content Include="Views\Course\Questions.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Courses\" />
