new Course - Presentation

--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -764,6 +764,7 @@
     <Content Include="Views\Course\_ChoiceGroup.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="bin\" />
     <Folder Include="Courses\" />
   </ItemGroup>
   <ItemGroup>
