New credentials scheme.

--- a/.gitignore
+++ b/.gitignore
@@ -174,4 +174,5 @@ UpgradeLog*.htm
 FakesAssemblies/
 /src/Lessons.sln.ide
 /src/uLearn.Web/Ideone/ExecutionService.Credentials.cs
+*.Settings.cs
 /src/uLearn.Web/Courses/
