Add zip-course post build step

--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -778,6 +778,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="bin\" />
+    <Folder Include="Courses.Staging\" />
     <Folder Include="Courses\" />
   </ItemGroup>
   <ItemGroup>
