--- a/.gitignore
+++ b/.gitignore
@@ -176,3 +176,4 @@ FakesAssemblies/
 /src/uLearn.Web/Ideone/ExecutionService.Credentials.cs
 *.Settings.cs
 /src/uLearn.Web/Courses/
+/src/uLearn.Web/Courses.Staging
