--- a/src/courses/BasicProgramming/BasicProgramming.csproj
+++ b/src/courses/BasicProgramming/BasicProgramming.csproj
@@ -62,6 +62,9 @@
     <Compile Include="Slides\U00_Basics\S070_MethodsVideo.cs" />
     <Compile Include="Slides\U00_Basics\S072_Methods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Content Include="Slides\logo.png" />
+    <Content Include="Slides\shapes.png" />
+    <Content Include="Slides\thumbnail.png" />
     <Content Include="Slides\U00_Basics\S081-Scope.xml">
       <SubType>Designer</SubType>
     </Content>
@@ -234,7 +237,13 @@
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>rd /S /Q $(SolutionDir)uLearn.Web\Courses\$(ProjectName)\
+    <PostBuildEvent>REM copy this post build step to new course
+del "$(OutDir)$(ProjectName).zip"
+"$(SolutionDir)..\tools\7z\7za.exe" a "$(OutDir)$(ProjectName).zip" "$(ProjectDir)Slides\*"
+copy "$(OutDir)$(ProjectName).zip" $(SolutionDir)uLearn.Web\Courses.Staging\
+
+
+rd /S /Q $(SolutionDir)uLearn.Web\Courses\$(ProjectName)\
 xcopy /Y /E $(ProjectDir)Slides $(SolutionDir)uLearn.Web\Courses\$(ProjectName)\</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
